#balloons-select-game: Fix bug audio on IOS and edit rotate screen

--- a/balloons-select-game/style.css
+++ b/balloons-select-game/style.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     touch-action: none;
-    background: url('images/bg_forest.png'); /* màu nền khi canvas nhỏ hơn màn hình */
+    background: url('public/assets/images/bg_forest.png'); /* màu nền khi canvas nhỏ hơn màn hình */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,6 +23,7 @@ body {
 canvas {
     display: block; /* loại bỏ margin tự động của canvas */
     margin-left: 0 !important;
+    margin-top: 0 !important;
 }
 
 #rotate-msg {
